--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
       </div>
       <div class="content">
         <div class="inner">
-          <h1>Sing Song After Math</h1>
-          <p>Sing Song<p>
+          <h1>Albert Einstein</h1>
+          <p>"Reality is merely an illusion, albeit a very persistent one."<p>
         </div>
       </div>
       <nav>
@@ -63,8 +63,8 @@
         <p>&emsp;&emsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         
         <center>
-        <a href="/" style="margin:10px; letter-spacing: 2px;" class="button icon regular fa-eye" target="_blank">Online CV</a></li>
-        <a href="/" style="margin:10px; letter-spacing: 2px;" class="button icon regular fa-eye" target="_blank">Formal CV</a></li>
+        <a href="https://www.wikiwand.com/en/Albert_Einstein" style="margin:10px; letter-spacing: 2px;" class="button icon regular fa-eye" target="_blank">Online CV</a></li>
+        <a onclick="window.open('assets/pdf/Example.pdf', '_blank');" style="margin:10px; letter-spacing: 2px;" class="button icon regular fa-eye">Formal CV</a></li>
         </center>
 
         <hr />
