--- a/src/index.html
+++ b/src/index.html
@@ -614,7 +614,7 @@
           <div class="fields">
             <div class="field half">
               <label for="demo-name">Name</label>
-              <input type="text" name="name" id="demo-name" value="" placeholder="I am  Sang, and you are?" required />
+              <input type="text" name="name" id="demo-name" value="" placeholder="I am Albert, and you are?" required />
             </div>
             <div class="field half">
               <label for="demo-email">Email</label>
