update _captcha function

--- a/src/index.html
+++ b/src/index.html
@@ -610,7 +610,7 @@
           <input type="text" name="_honey" style="display:none">
           <input type="hidden" name="_captcha" value="true">
           <input type="hidden" name="_template" value="box">
-          <input type="hidden" name="_next" value="https://singsongaftermath.com/#thanks">
+          <input type="hidden" name="_next" value="https://portfolio-dimension.vercel.app/#thanks">
           <div class="fields">
             <div class="field half">
               <label for="demo-name">Name</label>
